# Projekt-3-Przetwarzanie-Sygnalow

./: CMakeLists.txt  README.md  pyproject.toml
conda.recipe/: meta.yaml
docs/: python_example.rst
src/: main.cpp
src/scikit_build_example/: __init__.py  __init__.pyi
tests/: test.py  test_basic.py
